--- a/Repo2_1Config.cmake.in
+++ b/Repo2_1Config.cmake.in
@@ -28,7 +28,7 @@ include(CMakeFindDependencyMacro)
 # targets
 
 if (NOT TARGET Repo2_1::library1)
-  include("${CMAKE_CURRENT_LIST_DIR}/Repo1Targets.cmake")
+  include("${CMAKE_CURRENT_LIST_DIR}/Repo2_1Targets.cmake")
 endif()
 
 
