--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ message("CMAKE_TOOLCHAIN_FILE: ${CMAKE_TOOLCHAIN_FILE}")
 # dependencies
 
 
-include(Repo2_1Dependency.cmake)
+include(Repo2_1Dependencies.cmake)
 
 
 
@@ -126,12 +126,12 @@ install(
 )
 
 
-file(COPY ${CMAKE_CURRENT_LIST_DIR}/${PACKAGE_FILE_NAME}Dependency.cmake
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/${PACKAGE_FILE_NAME}Dependencies.cmake
     DESTINATION ${CMAKE_BINARY_DIR}/
 )
 
 install(
-  FILES ${CMAKE_CURRENT_LIST_DIR}/${PACKAGE_FILE_NAME}Dependency.cmake
+  FILES ${CMAKE_CURRENT_LIST_DIR}/${PACKAGE_FILE_NAME}Dependencies.cmake
   DESTINATION lib/cmake/${PACKAGE_PATH_NAME}/
 )
 
